tests/suppress_traces/suppress_traces.exp
Error: traces.js:15
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ Cannot assign `foo(...)` to `a` because number [1] is incompatible with string [2].
Trace:
* path 1:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ NumT [number]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [call of `foo`] (from path 2)
 15: var a: string = foo('hi'); // error number ~> string
         ^ ~> UseT(AssignVar, OpenT) [`a`]
* path 2:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ NumT [number]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [return] (from path 3)
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> UseT(UnknownUse, OpenT) [call of `foo`] (from path 6)
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> ReposLowerT [call of `foo`]
* path 3:
 12:   return bar();
              ^^^^^ NumT [number]
 12:   return bar();
              ^^^^^ ~> UseT(UnknownUse, OpenT) [call of `bar`] (from path 4)
 11: function foo(x: string) {
                            ^ ~> UseT(FunReturnStatement, OpenT) [return]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> ReposLowerT [return] (from path 6)
* path 4:
 12:   return bar();
              ^^^ FunT [function]
 12:   return bar();
              ^^^ ~> UseT(AssignVar, OpenT) [function] (from path 5)
 12:   return bar();
              ^^^ OpenT [`bar`]
 12:   return bar();
              ^^^^^ ~> CallT [call of `bar`]
* path 5:
  9: function bar(): number { return 5; }
     ^^^^^^^^^^^^^^^^^^^^^^ FunT [function]
  9: function bar(): number { return 5; }
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ~> UseT(AssignVar, OpenT) [function]
 12:   return bar();
              ^^^ ~> ReposLowerT [function]
* path 6:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^ FunT [function]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> CallT [call of `foo`] (from path 7)
* path 7:
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^ OpenT [`foo`]
 15: var a: string = foo('hi'); // error number ~> string
                     ^^^^^^^^^ ~> CallT [call of `foo`]
  References:
    9: function bar(): number { return 5; }
                       ^^^^^^ [1]: number
   15: var a: string = foo('hi'); // error number ~> string
              ^^^^^^ [2]: string

Warning: traces.js:8
  8: // $FlowFixMe - Error unused suppression
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 1 error and 1 warning
